--- a/index.html
+++ b/index.html
@@ -64,15 +64,31 @@
       </tr>
       <tr>
         <td>Task 1</td>
-        <td><a href="Task1.html">Task 1</a></td>
+        <td><a href="Task-1.html">Task 1</a></td>
       </tr>
       <tr>
         <td>Task 2</td>
-        <td><a href="Task2.html">Task 2</a></td>
+        <td><a href="Navigation_Bars.html">Task 2</a></td>
       </tr>
       <tr>
         <td>Task 3</td>
-        <td><a href="Task3.html">Task 3</a></td>
+        <td><a href="Company_table.html">Task 3</a></td>
+      </tr>
+      <tr>
+        <td>Task 4</td>
+        <td><a href="Hoverable_Sidenav_button.html">Task 3</a></td>
+      </tr>
+      <tr>
+        <td>Task 5</td>
+        <td><a href="My_first_styled_page.html">Task 3</a></td>
+      </tr>
+      <tr>
+        <td>Task 6</td>
+        <td><a href="Login_page.html">Task 3</a></td>
+      </tr>
+      <tr>
+        <td>Task 7</td>
+        <td><a href="Registration.html">Task 3</a></td>
       </tr>
     </table>
   </body>
