--- a/index.html
+++ b/index.html
@@ -9,89 +9,108 @@
       td,
       th,
       tr {
-        border: 1px solid black;
-        border-collapse: collapse;
-        width: 400px;
-        margin-left: auto;
-        margin-right: auto;
+        padding: 10px;
+        width: 650px;
         text-align: center;
+        border-collapse: collapse;
+        font-family: Arial, Helvetica, sans-serif;
+        
       }
       th {
-        background-color: rgb(0, 106, 255);
-        color: aliceblue;
+        background: rgb(2, 0, 36);
+        background: linear-gradient(
+          90deg,
+          rgba(2, 0, 36, 1) 0%,
+          rgba(9, 9, 121, 1) 35%,
+          rgba(0, 212, 255, 1) 100%
+        );
+        color: white;
       }
-      h1 {
-        border: 1px solid;
-        background-color: aliceblue;
+      tr:nth-child(odd) {
+        background-color: #f2f2f2;
+      }
+      tr:hover {
+        background-color: #ddd;
+      }
+      a{
+        text-decoration: none;
+      }
+      h1{
         text-align: center;
-        font-family: 'Courier New', Courier, monospace;
+        font-family: sans-serif
       }
     </style>
   </head>
   <body>
-    <h1>HTML TASKS</h1>
-    <table>
+    <h1>BOOTSTRAP TASKS</h1>
+    <table style="width: 100%; height: 100%">
       <tr>
         <th>Task Name</th>
         <th>Task Link</th>
       </tr>
       <tr>
         <td>Task 1</td>
-        <td><a href="Task-1.html">Task 1</a></td>
+        <td><a href="Task1.html">Task 1</a></td>
       </tr>
       <tr>
         <td>Task 2</td>
-        <td><a href="Task-2.html">Task 2</a></td>
+        <td><a href="Task2.html">Task 2</a></td>
       </tr>
       <tr>
         <td>Task 3</td>
-        <td><a href="Task-3.html">Task 3</a></td>
+        <td><a href="Task3.html">Task 3</a></td>
       </tr>
       <tr>
         <td>Task 4</td>
-        <td><a href="Task-4.html">Task 4</a></td>
+        <td><a href="Task4.html">Task 4</a></td>
       </tr>
       <tr>
         <td>Task 5</td>
-        <td><a href="Task-5.html">Task 4</a></td>
-      </tr>
-    </table>
-    <h1>CSS TASKS</h1>
-    <table>
-      <tr>
-        <th>Task Name</th>
-        <th>Task Link</th>
-      </tr>
-      <tr>
-        <td>Task 1</td>
-        <td><a href="Task-1.html">Task 1</a></td>
-      </tr>
-      <tr>
-        <td>Task 2</td>
-        <td><a href="Navigation_Bars.html">Task 2</a></td>
-      </tr>
-      <tr>
-        <td>Task 3</td>
-        <td><a href="Company_table.html">Task 3</a></td>
-      </tr>
-      <tr>
-        <td>Task 4</td>
-        <td><a href="Hoverable_Sidenav_button.html">Task 3</a></td>
-      </tr>
-      <tr>
-        <td>Task 5</td>
-        <td><a href="My_first_styled_page.html">Task 3</a></td>
+        <td><a href="Task5.html">Task 5</a></td>
       </tr>
       <tr>
         <td>Task 6</td>
-        <td><a href="Login_page.html">Task 3</a></td>
+        <td><a href="Task6.html">Task 6</a></td>
+      </tr>
+    </table>
+    <h1>JAVASCRIPT TASKS</h1>
+    <table style="width: 100%; height: 100%">
+      <tr>
+        <th>Task Name</th>
+        <th>Task Link</th>
+      </tr>
+      <tr>
+        <td>Task 1</td>
+        <td><a href="Task7.html">Task 1</a></td>
+      </tr>
+      <tr>
+        <td>Task 2</td>
+        <td><a href="Task8.html">Task 2</a></td>
+      </tr>
+      <tr>
+        <td>Task 3</td>
+        <td><a href="Task9.html">Task 3</a></td>
+      </tr>
+      <tr>
+        <td>Task 4</td>
+        <td><a href="Task10.html">Task 4</a></td>
+      </tr>
+      <tr>
+        <td>Task 5</td>
+        <td><a href="Task11.html">Task 5</a></td>
+      </tr>
+      <tr>
+        <td>Task 6</td>
+        <td><a href="Task12.html">Task 6</a></td>
       </tr>
       <tr>
         <td>Task 7</td>
-        <td><a href="Registration.html">Task 3</a></td>
+        <td><a href="Task13.html">Task 7</a></td>
+      </tr>
+      <tr>
+        <td>Task 8</td>
+        <td><a href="Task14.html">Task 8</a></td>
       </tr>
     </table>
-  </body>
+  </body>
 </html>
-
-
